--- a/configs/train-temporal/train_temporal.yaml
+++ b/configs/train-temporal/train_temporal.yaml
@@ -1,27 +1,27 @@
 train_dataset:
   dataset:
-    name: video-image-folder
+    name: vimeo-image-folder #video-image-folder
     args:
       root_path: ./load/train-temporal/train
   wrapper:
     name: sr-implicit-video-downsampled
     args:
       temporal_scale_min: 2
-      temporal_scale_max: 3
+      #temporal_scale_max: 3
       sample_q: 2304
-      #augment: true
+      augment: true
   batch_size: 1
 
 val_dataset:
   dataset:
-    name: video-image-folder
+    name: vimeo-image-folder
     args:
       root_path: ./load/train-temporal/val
   wrapper:
     name: sr-implicit-video-downsampled
     args:
       temporal_scale_min: 2
-      temporal_scale_max: 3
+      #temporal_scale_max: 3
       sample_q: 2304
   batch_size: 1
 
