--- a/configs/train-temporal/train_temporal.yaml
+++ b/configs/train-temporal/train_temporal.yaml
@@ -2,7 +2,7 @@ train_dataset:
   dataset:
     name: vimeo-image-folder #video-image-folder
     args:
-      root_path: ./load/train-temporal/train
+      root_path: /content/vime_low_resolution/train #./load/train-temporal/train
   wrapper:
     name: sr-implicit-video-downsampled
     args:
@@ -16,12 +16,12 @@ val_dataset:
   dataset:
     name: vimeo-image-folder
     args:
-      root_path: ./load/train-temporal/val
+      root_path: /content/vime_low_resolution/val #./load/train-temporal/val
   wrapper:
     name: sr-implicit-video-downsampled
     args:
       temporal_scale_min: 2
-      #temporal_scale_max: 3
+      temporal_scale_max: 3
       sample_q: 2304
   batch_size: 1
 
