--- a/configs/train-temporal/train_temporal.yaml
+++ b/configs/train-temporal/train_temporal.yaml
@@ -33,7 +33,7 @@ model:
   name: liif
   args:
     encoder_spec:
-      name: rdn
+      name: edsr-baseline
       args:
         no_upsampling: true
     imnet_spec:
